hphp/hack/test/typecheck/expression_trees/instance_method_protected2.php.constraint_method_call.exp
ERROR: File "instance_method_protected2.php", line 8, characters 7-15:
Typing error (Typing[4041])
  File "instance_method_protected2.php", line 14, characters 22-24:
  Too many mandatory arguments (expected 0 but got 1)
  File "instance_method_protected2.php", line 8, characters 7-15:
  Because of this definition
ERROR: File "instance_method_protected2.php", line 8, characters 11-13:
Cannot access non-public members within expression trees. (Typing[4448])
  File "instance_method_protected2.php", line 14, characters 22-24:
  Member defined here
